--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- collegamento al framework bootstrap via CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
     <!-- collegamento a font awesome via CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -19,10 +16,38 @@
 </head>
 <body>
 
-    <h1>BUONGIORNO</h1>
+    
     
     <!-- questo div id=app si collega all'istanza finalizzata da mount('#app') creata in main.js -->
-    <div id="app"></div>
+    <div id="app">
+
+        <!-- contenitore centrale che contiene i 2 minicontenitori affiancati -->
+        <div class="container">
+
+            <!-- minicontenitore di sx -->
+            <div class="minicontainer-sx">
+                <header class="header-sx"></header>
+                <main class="main-sx">
+                    <section class="campanella-notifiche"></section>
+                    <section class="cerca-chat"></section>
+                    <section class="utenti"></section>
+                </main>
+
+            </div>
+
+            <!-- minicontenitore di dx -->
+            <div class="minicontainer-dx">
+                <header class="header-dx"></header>
+                <main class="main-dx"></main>
+                <footer class="footer-dx"></footer>
+
+            </div>
+
+        </div>
+
+
+
+    </div>
 
     <!-- collegamento al framework vue.js via CDN -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
