mainsx overflow hidden, mainsx-ul overflow auto

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -30,7 +30,55 @@
                 <main class="main-sx">
                     <section class="campanella-notifiche"></section>
                     <section class="cerca-chat"></section>
-                    <section class="utenti"></section>
+                    <ul>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                        <li>icona</li>
+                     
+                        
+                    </ul>
                 </main>
 
             </div>
