aggiunta img e nome sofia in headersx

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -26,7 +26,23 @@
 
             <!-- minicontenitore di sx -->
             <div class="minicontainer-sx">
-                <header class="header-sx"></header>
+
+                <header class="header-sx">
+                    <div class="img-nome">
+                        <div class="img-container">
+                            <img class="sofia" src="img/avatar_io.jpg" alt="">
+                        </div>
+                        <div>Sofia</div>
+                    </div>
+                    <div class="icone">
+                        <i class="fa-solid fa-circle-notch"></i>
+                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+
+                    </div>
+
+                </header>
+
                 <main class="main-sx">
                     <section class="campanella-notifiche"></section>
                     <section class="cerca-chat"></section>
