--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -82,18 +82,43 @@
             <div class="minicontainer-dx">
 
                 <header class="header-dx">
-                    <div class="foto-selezionata">
-                        <img v-if="contattoSelezionato" :src="contattoSelezionato.avatar">
+
+                    <div class="foto-e-nomi-selezionati">
+                        <div class="foto-selezionata">
+                            <img v-if="contattoSelezionato" :src="contattoSelezionato.avatar">
+                        </div>
+                        <div class="nome-selezionato" v-text="contattoSelezionato ? contattoSelezionato.nome : ''"></div>
                     </div>
-                    <div class="nome-selezionato" v-text="contattoSelezionato ? contattoSelezionato.nome : ''"></div>
-                    
+
+                    <div class="container-di-3icone">
+                        <div>
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-paperclip"></i>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                        </div>
+                    </div>
                 </header>
 
                 <main class="main-dx">
-                    <div class="messaggio-mio"></div>
-                    <div class="messaggio-suo"></div>
+                    <div class="messaggio-mio">{{ primoMessaggioSent }}</div>
+                    <div class="messaggio-suo">{{ primoMessaggioReceived }}</div>
                 </main>
-                <footer class="footer-dx"></footer>
+
+                <footer class="footer-dx">
+                    <div class="smile-container">
+                        <i class="fa-regular fa-face-smile"></i>
+                    </div>
+                    <div class="input-container">
+                        <input type="text" placeholder="Scrivi un messaggio">
+                    </div>
+                    <div class="invio-container">
+                        <i class="fa-solid fa-paper-plane"></i>
+                    </div>
+                </footer>
 
             </div>
 
