--- a/prove/i.html
+++ b/prove/i.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prove</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>prove</title>
+
 </head>
+
 <body>
-  <div id="app"></div>
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>  
+
+  <div id="app">
+    <section class="cerca-chat">
+      <!-- 2: HO MODIFICATO QUESTO INPUT -->
+      <input type="text" placeholder="cerca chat" @input="filtro = $event.target.value">
+    </section>
+    <ul>
+      <!-- 4: HO MODIFICATO QUESTO LI -->
+      <li v-for="(contatto, index) in contattiFiltrati" :key="index" @click="selezionaContatto(contatto)">
+        <img :src="contatto.avatar">
+        <div class="info-contatto">
+          <h3>{{ contatto.nome }}</h3>
+        </div>
+      </li>
+    </ul>
+  </div>
+
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="m.js"></script>
 </body>
+
 </html>
